# learn

./: BUILD  README.md
asm/arm/basics/: .gitignore  mov.s
golang/scratch/: BUILD
golang/scratch/exitcode/: BUILD  exitcode_test.go  go.mod
golang/tutorial/greetings/: BUILD
golang/tutorial/hello/: BUILD.bazel  hello.go
golang/with-tests/: BUILD.bazel  greetserver.go
golang/with-tests/06_pointers_errors/: wallet.go
golang/with-tests/07_maps/: dictionary.go
golang/with-tests/commands/: greetserver.go
golang/with-tests/countdown/: BUILD.bazel
golang/with-tests/greet/: BUILD.bazel
golang/with-tests/hello/: BUILD.bazel
golang/with-tests/repeat/: go.mod
greetings/: greetings.go
hello/: hello.go
learn/: README.md  WORKSPACE
learn/asm/arm/basics/: .gitignore  README.md  add.s  compare.s  sayHello.s
learn/c/cprogramming.com/: README.md  intro.c
learn/golang/: BUILD
learn/golang/goa/learn/calc/: go.mod  go.sum
learn/golang/greetings/: greetings_test.go
learn/golang/scratch/: BUILD.bazel  exitcode.go
learn/golang/scratch/exitcode/: BUILD.bazel  exitcode.go  exitcode_test.go
learn/golang/tutorial/: BUILD  BUILD.bazel  hello.go
learn/golang/with-tests/: BUILD  greetserver.go  hello.go
learn/golang/with-tests/adder/: BUILD  adder_test.go
learn/golang/with-tests/commands/: BUILD.bazel
learn/golang/with-tests/countdown/: countdown.go  countdown_test.go
learn/golang/with-tests/dictionary/: BUILD  dictionary.go  dictionary_test.go
learn/golang/with-tests/hello/: BUILD  BUILD.bazel  hello.go
learn/golang/with-tests/repeat/: BUILD.bazel  repeat.go  repeat_test.go
learn/golang/with-tests/shapes/: BUILD.bazel
learn/golang/with-tests/sum/: BUILD  sum.go  sum_test.go
learn/golang/with-tests/wallet/: BUILD  go.mod
src/: BUILD  WORKSPACE
src/golang/scratch/exitcode/: exitcode.go
src/golang/tutorial/greetings/: go.mod
src/golang/with-tests/: README.md
src/golang/with-tests/01_hello/: BUILD  hello_test.go
src/golang/with-tests/03_iteration/: repeat.go  repeat_test.go
src/golang/with-tests/04_arrayslice/: sum.go  sum_test.go
src/golang/with-tests/05_structs_methods_interfaces/: shapes.go
src/golang/with-tests/06_maps/: dictionary_test.go
src/golang/with-tests/07_maps/: dictionary.go  dictionary_test.go
src/golang/with-tests/08_dependency_injection/: greet.go  main.go
src/golang/with-tests/09_mocking/: countdown.go
src/golang/with-tests/arrayslice/: go.mod  sum.go  sum_test.go
src/golang/with-tests/commands/: main.go
src/golang/with-tests/hello/: BUILD  hello.go  hello_test.go
src/golang/with-tests/integers/: adder.go  adder_test.go
src/golang/with-tests/iteration/: repeat.go
src/golang/with-tests/maps/: dictionary_test.go
src/golang/with-tests/shapes/: shapes.go  shapes_test.go
src/golang/with-tests/wallet/: go.mod  wallet.go  wallet_test.go
