load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "commands_lib",
    srcs = ["main.go"],
    importpath = "learn/golang/with-tests/commands",
    visibility = ["//visibility:private"],
    deps = ["@com_github_bitmonk_learn//golang/with-tests/hello:go_default_library"],
)

go_binary(
    name = "commands",
    embed = [":commands_lib"],
    visibility = ["//visibility:public"],
)
